syntax = "proto3";
package assignment;

message Assignment {
    string id = 1;
    string rubric_id = 2;
    string name = 3;
    string instructions = 4;
}

message Rubric {
    string id = 1;
    string instructor_id = 2;
    map<string, RubricCriterion> rubric_criteria = 5;
}

message RubricCriterion {
    string name = 1;
    repeated CriteriaLevel levels = 2;
}

message CriteriaLevel {
    int32 score = 1;
    string description = 2;
}
