syntax = "proto3";
package grade;

message CriteriaGrade {
    string id = 1;
    string submission_id = 2;
    string assignment_id = 3;
    GradeType type = 4;
    string grade_method_id = 5;
    string name = 6;
    float score = 7;
    string assesment = 8;
}

message CriteriaEmbedding {
    string id = 1;
    string crit_grade_id = 2;
    repeated float embedding = 5;
}

enum GradeType {
    AI_GRADED = 0;
    FACULTY_ADJUSTED = 1;
    AI_INFERRED = 2;
}

message StudentRequestedRegrade {
    string id = 1;
    string student_id = 2;
    string submission_id = 3;
    string reasoning = 4;
}

